# notary-platform

./: .gitignore  CODEBUDDY.md  Dockerfile  LICENSE  Makefile  ONBOARDING_FLOW.md  README.md  compose.yaml  design_guidelines.json  pyproject.toml  seed_and_serve.py  topology.json
.emergent/: emergent.yml
.emergent/cron/: webhook-crons
.github/workflows/: ci.yml
.sw-factory/WO-090/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-100/: checklist.md  context.md  implementation-plan.md  review-log.md
docker/: api_server.Dockerfile  replay_engine.Dockerfile
docs/: BACKEND_ALIGNMENT_INSTRUCTIONS.md  CODEBUDDY.md  CONTRIBUTING.md  FRONTEND_HANDOFF.md  MIGRATION.md  SECURITY.md  SETUP.md  WP-020-completion.md  dev-deploy-framework.md  final-evidence-pack.md  notary-platform-architecture-systems-progress.md  notary-platform-build-instructions.md  notary-platform-product-plan.md  security-deployment-readiness.md
docs/archive/: notary-platform-architecture-systems-progress.md
docs/demo/: demo-implementation-plan.md  demo-release-manifest.md  harborline-presenter-script.md  notary-demo-non-technical-guide.md
docs/dep/: README.md  governance.md  spec.md  whitepaper.md
docs/specifications/: CODING_AGENT_EXECUTION_HANDOFF.md  DECISION_EVIDENCE_AND_SWEEP_ROADMAP.md  (+2 more)
infra/: README.md  deploy-api.sh
memory/: PRD.md  test_credentials.md
scripts/: demo.sh  gen_topology.py  harborline_demo_preflight.py  northstar_demo_preflight.py
tests/: test_auth.py  test_candidates.py  test_capability_inventory.py  test_certificate_semantics.py  test_certificates.py  test_customer_record_golden_path.py  test_dashboard.py  test_decision_identity_resolver.py  test_decision_workflow_setup.py  test_demo_preflight.py  test_demo_replayability_boundaries.py  test_dep_conformance.py  test_dep_ingress.py  test_dep_ingress_tenant_isolation.py  test_deployment_safety.py  test_evidence_pack.py  test_evidence_sufficiency.py  test_import_records.py  test_ingestion.py  test_initial_evaluators.py  test_landscape_api.py  test_live_status.py  test_placeholder.py  test_platform_static_app.py  test_postgres_s3_storage.py  test_proof_bridge.py  test_release_gate_cli.py  test_release_gate_vertical.py  test_remote_storage_contract.py  test_replay.py  test_replay_runner_contract.py  test_sdk_setup_truth.py  test_security_readiness.py  test_setup_engine_fixes.py  test_shared_demo_storage.py  test_source_profiling.py  test_storage_tenant_isolation.py  test_sweep.py  test_ui_vertical.py  test_verification.py  (+1 more)
(+156 files in other folders)
