[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notary-platform"
version = "0.1.0"
description = "API server, replay engine, and infrastructure scaffold for the Notary forensics platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Notary Platform Team" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
notary-replay-worker = "notary_platform.replay_engine.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["notary_platform"]
