[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notary-platform"
version = "0.0.1"
description = "Notary Platform — ingestion, replay, mutation, and certification for forensic snapshots"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Notary Contributors"}]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]
# Only needed when NOTARY_USE_REMOTE_STORAGE is enabled (AWS deploy).
cloud = [
    "boto3>=1.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[tool.hatch.version]
path = "src/notary_platform/__init__.py"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 160
target-version = "py39"
select = ["E", "F", "W", "I"]
extend-exclude = [".venv", "venv", "__pycache__"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true
